# toolchain-builder

./: .gitignore  README.md  copilot_prompt_toolchain_conda_macos.txt  pyproject.toml  toolchain-builder.code-workspace
.github/workflows/: build-and-release.yml
docs/: llvm-conda-build.md
envs/: toolchain-builder-conda-build.yml
scripts/: build_consumer_wheel.sh  create_conda_env.sh  download_and_setup.sh
src/qrew_toolchain/: __init__.py  cli.py
src/toolchain_builder/: __init__.py  cli.py
