[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolchain-builder"
version = "0.2.0"
description = "Helper CLI to print environment exports for a prebuilt LLVM/MLIR toolchain (macOS arm64)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sophie Block"}]
dependencies = []

[project.scripts]
toolchain-builder = "toolchain_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

